--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.22.0",
     "bootstrap": "^5.1.2",
+    "mobx": "^6.3.5",
+    "mobx-react": "^7.2.1",
+    "mobx-react-lite": "^3.2.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-canvas-confetti": "^1.2.1",
